<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".AbcNewsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/abcNewsImageView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/abc_news_image"
            android:scaleType="centerInside"
            android:src="@drawable/abc_news"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/abcNewsDescriptionTextView"
            android:layout_width="389dp"
            android:layout_height="58dp"
            android:text="@string/abc_news_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abcNewsTitleTextView"
            app:layout_constraintVertical_bias="0.052" />

        <TextView
            android:id="@+id/abcNewsTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/abc_news"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abcNewsImageView"
            app:layout_constraintVertical_bias="0.036" />

        <TextView
            android:id="@+id/abcNewsRelatedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/related_stories"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abcNewsDescriptionTextView"
            app:layout_constraintVertical_bias="0.136" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/abcNewsRelatedRecyclerView"
            android:layout_width="386dp"
            android:layout_height="128dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/abcNewsRelatedTextView"
            app:layout_constraintVertical_bias="0.058" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>