<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".NineNewsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nineNewsDescriptionTextView"
            android:layout_width="390dp"
            android:layout_height="73dp"
            android:text="@string/nine_news_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nineNewsTitleTextView"
            app:layout_constraintVertical_bias="0.052" />

        <TextView
            android:id="@+id/nineNewsTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_9news"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nineNewsImageView"
            app:layout_constraintVertical_bias="0.03" />

        <TextView
            android:id="@+id/nineNewsRelatedTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/related_stories"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.045"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nineNewsDescriptionTextView"
            app:layout_constraintVertical_bias="0.136" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/nineNewsRelatedRecyclerView"
            android:layout_width="386dp"
            android:layout_height="128dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nineNewsRelatedTextView"
            app:layout_constraintVertical_bias="0.058" />

        <ImageView
            android:id="@+id/nineNewsImageView"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/nine_news_australia_national"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>